# tensorflow

tensorflow/contrib/lite/examples/seq_inference/: BUILD  CMakeLists.txt  featurevec_helpers.cc  featurevec_helpers.h  featurevec_helpers_impl.h  get_top_n.h  get_top_n_impl.h  seq_inference.cc  seq_inference.h  seq_inference.md  seq_inference_test.cc
tensorflow/contrib/lite/kernels/internal/: round.h
tensorflow/contrib/lite/tools/make/: Makefile  build_bev_lib.sh  build_ruby2_lib.sh
tensorflow/contrib/lite/tools/make/targets/: bev_makefile.inc
tensorflow/lite/examples/label_image/: CMakeLists.txt
tensorflow/lite/examples/seq_inference/: BUILD  CMakeLists.txt  featurevec_helpers.cc  featurevec_helpers.h  featurevec_helpers_impl.h  get_top_n.h  get_top_n_impl.h  seq_inference.cc  seq_inference.h  seq_inference.md  seq_inference_test.cc
tensorflow/lite/examples/seq_inference/testdata/: diningRoom_001-10-features.npy  labels.txt  mlp-features.316-0.459-0.88.tflite
tensorflow/lite/kernels/internal/: round.h
tensorflow/lite/tools/make/: Makefile  build_bev_lib.sh  build_ruby2_lib.sh
tensorflow/lite/tools/make/targets/: ruby2_makefile.inc
